include/nurs/nurs.h

/*
 * config
 */
enum nurs_config_type {
	NURS_CONFIG_T_NONE,
	NURS_CONFIG_T_INTEGER,
	NURS_CONFIG_T_BOOLEAN,
	NURS_CONFIG_T_STRING,
	NURS_CONFIG_T_CALLBACK,
};
struct nurs_config;
int nurs_config_integer(const struct nurs_config *config, uint8_t idx);
bool nurs_config_boolean(const struct nurs_config *config, uint8_t idx);
const char *nurs_config_string(const struct nurs_config *config, uint8_t idx);
uint8_t nurs_config_len(const struct nurs_config *config);
uint16_t nurs_config_type(const struct nurs_config *config, uint8_t idx);
uint8_t nurs_config_index(const struct nurs_config *config, const char *name);
struct nurs_input;
/* sorry for bad naming...
 * input_len returns how many keys in input, and
 * input_size returns length of key specified by name */
uint16_t nurs_input_len(const struct nurs_input *input);
uint16_t nurs_input_size(const struct nurs_input *input, uint16_t idx);
const char *nurs_input_name(const struct nurs_input *input, uint16_t idx);
uint16_t nurs_input_type(const struct nurs_input *input, uint16_t idx);
uint16_t nurs_input_index(const struct nurs_input *input, const char *name);
bool nurs_input_bool(const struct nurs_input *input, uint16_t idx);
uint8_t nurs_input_u8(const struct nurs_input *input, uint16_t idx);
uint16_t nurs_input_u16(const struct nurs_input *input, uint16_t idx);
uint32_t nurs_input_u32(const struct nurs_input *input, uint16_t idx);
uint64_t nurs_input_u64(const struct nurs_input *input, uint16_t idx);
in_addr_t nurs_input_in_addr(const struct nurs_input *input, uint16_t idx);
const struct in6_addr *
	nurs_input_in6_addr(const struct nurs_input *input, uint16_t idx);
const void *nurs_input_pointer(const struct nurs_input *input, uint16_t idx);
const char *nurs_input_string(const struct nurs_input *input, uint16_t idx);
bool nurs_input_is_valid(const struct nurs_input *input, uint16_t idx);
bool nurs_input_is_active(const struct nurs_input *input, uint16_t idx);
uint32_t nurs_input_ipfix_vendor(const struct nurs_input *input, uint16_t idx);
uint16_t nurs_input_ipfix_field(const struct nurs_input *input, uint16_t idx);
const char *nurs_input_cim_name(const struct nurs_input *input, uint16_t idx);
struct nurs_output;
uint16_t nurs_output_len(const struct nurs_output *output);
uint16_t nurs_output_size(const struct nurs_output *output, uint16_t idx);
uint16_t nurs_output_type(const struct nurs_output *output, uint16_t idx);
uint16_t nurs_output_index(const struct nurs_output *output, const char *name);
int nurs_output_set_bool(struct nurs_output *output,
			 uint16_t idx, bool value);
int nurs_output_set_u8(struct nurs_output *output,
		       uint16_t idx, uint8_t value);
int nurs_output_set_u16(struct nurs_output *output,
			uint16_t idx, uint16_t value);
int nurs_output_set_u32(struct nurs_output *output,
			uint16_t idx, uint32_t value);
int nurs_output_set_u64(struct nurs_output *output,
			uint16_t idx, uint64_t value);
int nurs_output_set_in_addr(struct nurs_output *output,
			    uint16_t idx, in_addr_t value);
int nurs_output_set_in6_addr(struct nurs_output *output,
			     uint16_t idx, const struct in6_addr *value);
int nurs_output_set_pointer(struct nurs_output *output,
			    uint16_t idx, const void *value);
int nurs_output_set_string(struct nurs_output *output,
			   uint16_t idx, const char *value);
void *nurs_output_pointer(const struct nurs_output *output, uint16_t idx);
int nurs_output_set_valid(struct nurs_output *output, uint16_t idx);
/*
 * plugin
 */
enum nurs_return_t {
	NURS_RET_ERROR	= -1,
	NURS_RET_STOP	= -2,
	NURS_RET_OK	= 0,
};
struct nurs_plugin;
struct nurs_producer;
struct nurs_producer_def {
	struct list_head 	list;
	struct nurs_dl_handle	*dlh;
	int			type;

	bool			resolve_callback;
	bool			dynamic;
	int16_t			refcnt;

	char			version[NURS_NAME_LEN + 1];
	char			name[NURS_NAME_LEN + 1];
	uint16_t		context_size;
	struct nurs_config_def	*config_def;

	struct nurs_output_def	*output_def;		/* required */

	union {						/* required */
		nurs_producer_organize_t	organize;
		/* _cb_s are for dynamic cb assignment from string */
		char			organize_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* required */
		nurs_producer_disorganize_t	disorganize;
		/* _cb_s are for dynamic cb assignment from string */
		char			disorganize_cb_s[NURS_NAME_LEN + 1];
	};
	union {
		nurs_producer_start_t	start;		/* optional */
		char			start_cb_s[NURS_NAME_LEN + 1];
	};
	union {
		nurs_producer_stop_t	stop;		/* optional */
		char			stop_cb_s[NURS_NAME_LEN + 1];
	};
	union {
		nurs_producer_signal_t	signal;		/* optional */
		char			signal_cb_s[NURS_NAME_LEN + 1];
	};
};
struct nurs_filter_def {
	struct list_head 	list;
	struct nurs_dl_handle	*dlh;
	int 			type;

	bool			resolve_callback;
	bool			dynamic;
	int16_t			refcnt;

	char			version[NURS_NAME_LEN + 1];
	char			name[NURS_NAME_LEN + 1];
	uint16_t		context_size;
	struct nurs_config_def	*config_def;

	bool			mtsafe;			/* default false */
	struct nurs_input_def	*input_def;		/* required */
	struct nurs_output_def	*output_def;		/* required */

	union {						/* optional */
		nurs_organize_t		organize;
		char			organize_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_disorganize_t	disorganize;
		char			disorganize_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_start_t		start;
		char			start_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_stop_t		stop;
		char			stop_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* required */
		nurs_filter_interp_t	interp;
		char			interp_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_signal_t		signal;
		char			signal_cb_s[NURS_NAME_LEN + 1];
	};
};
struct nurs_consumer_def {
	struct list_head 	list;
	struct nurs_dl_handle	*dlh;
	int			type;

	bool			resolve_callback;
	bool			dynamic;
	int16_t			refcnt;

	char			version[NURS_NAME_LEN + 1];
	char			name[NURS_NAME_LEN + 1];
	uint16_t		context_size;
	struct nurs_config_def	*config_def;

	bool			mtsafe;			/* default false */
	struct nurs_input_def	*input_def;		/* required */

	union {						/* optional */
		nurs_organize_t		organize;
		char			organize_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_disorganize_t	disorganize;
		char			disorganize_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_start_t		start;
		char			start_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_stop_t		stop;
		char			stop_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* required */
		nurs_consumner_interp_t	interp;
		char			interp_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_signal_t		signal;
		char			signal_cb_s[NURS_NAME_LEN + 1];
	};
};
struct nurs_coveter_def {
	struct list_head 	list;
	struct nurs_dl_handle	*dlh;
	int 			type;

	bool			resolve_callback;
	bool			dynamic;
	int16_t			refcnt;

	char			version[NURS_NAME_LEN + 1];
	char			name[NURS_NAME_LEN + 1];
	uint16_t		context_size;
	struct nurs_config_def	*config_def;

	bool			mtsafe;			/* default false */

	union {						/* optional */
		nurs_coveter_organize_t	organize;
		char			organize_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_disorganize_t	disorganize;
		char			disorganize_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_start_t		start;
		char			start_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_stop_t		stop;
		char			stop_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* required */
		nurs_consumner_interp_t	interp;
		char			interp_cb_s[NURS_NAME_LEN + 1];
	};
	union {						/* optional */
		nurs_signal_t		signal;
		char			signal_cb_s[NURS_NAME_LEN + 1];
	};
};
int nurs_producer_unregister_name(const char *name);
int nurs_filter_unregister_name(const char *name);
int nurs_consumer_unregister_name(const char *name);
int nurs_coveter_unregister_name(const char *name);
struct nurs_producer_def *
	nurs_producer_register_jsons(const char *input, uint16_t context_size);
struct nurs_filter_def *
	nurs_filter_register_jsons(const char *input, uint16_t context_size);
struct nurs_consumer_def *
	nurs_consumer_register_jsons(const char *input, uint16_t context_size);
struct nurs_coveter_def *
	nurs_coveter_register_jsons(const char *input, uint16_t context_size);
struct nurs_producer_def *
	nurs_producer_register_jsonf(const char *fname, uint16_t context_size);
struct nurs_filter_def *
	nurs_filter_register_jsonf(const char *fname, uint16_t context_size);
struct nurs_consumer_def *
	nurs_consumer_register_jsonf(const char *fname, uint16_t context_size);
struct nurs_coveter_def *
	nurs_coveter_register_jsonf(const char *fname, uint16_t context_size);
int nurs_plugins_register_jsonf(const char *fname);
int nurs_plugins_unregister_jsonf(const char *fname);
void *nurs_producer_context(const struct nurs_producer *producer);
void *nurs_plugin_context(const struct nurs_plugin *plugin);
const struct nurs_config *nurs_producer_config(const struct nurs_producer *producer);
const struct nurs_config *nurs_plugin_config(const struct nurs_plugin *plugin);
/**
 *  no doxygen comment below
 */

/*
 * worker
 */
enum nurs_return_t
nurs_publish(struct nurs_output *output);
/*
 * ioset
 */
struct nurs_output *nurs_get_output(struct nurs_producer *producer);
int nurs_put_output(struct nurs_output *output);
struct nurs_fd;
typedef enum nurs_return_t
	(*nurs_fd_cb_t)(int fd, uint16_t when, void *data);
struct nurs_fd *nurs_fd_create(int fd, uint16_t when);
void nurs_fd_destroy(struct nurs_fd *nfd);
int nurs_fd_register(struct nurs_fd *nfd, nurs_fd_cb_t cb, void *data);
int nurs_fd_unregister(struct nurs_fd *nfd);
/*
 * timer
 */
struct nurs_timer;
typedef enum nurs_return_t
	(*nurs_timer_cb_t)(struct nurs_timer *timer, void *data);
struct nurs_timer *nurs_timer_create(const nurs_timer_cb_t cb, void *data);
int nurs_timer_destroy(struct nurs_timer *timer);
int nurs_timer_add(struct nurs_timer *timer, time_t sc);
int nurs_itimer_add(struct nurs_timer *timer, time_t ini, time_t per);
int nurs_timer_del(struct nurs_timer *timer);
int nurs_timer_pending(struct nurs_timer *timer);
void __nurs_log(int level, char *file, int line, const char *message, ...);